--- a/latihan2.html
+++ b/latihan2.html
@@ -139,7 +139,7 @@
     <!--html media-->
     <p id="E">Berikut adalah cuplikan film Doraemon</p>
     <video width="500" height="240" controls>
-    	<source src="/Tugas2/video/doraemon.mp4" alt="profil" type="video/mp4">
+    	<source src="/video/doraemon.mp4" alt="profil" type="video/mp4">
     	</video>
     	<br><br>
     	<!--html form-->
