--- a/latihan2.html
+++ b/latihan2.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Berkata Bercerita</title>
+	<link rel="shortcut icon" type="favicon.ico">
 </head>
 <body>
 	<style>
@@ -139,7 +140,7 @@
     <!--html media-->
     <p id="E">Berikut adalah cuplikan film Doraemon</p>
     <video width="500" height="240" controls>
-    	<source src="/video/doraemon.mp4" alt="profil" type="video/mp4">
+    	<source src="video/doraemon.mp4" alt="profil" type="video/mp4">
     	</video>
     	<br><br>
     	<!--html form-->
