--- a/latihan2.html
+++ b/latihan2.html
@@ -140,7 +140,7 @@
     <!--html media-->
     <p id="E">Berikut adalah cuplikan film Doraemon</p>
     <video width="500" height="240" controls>
-    	<source src="video/doraemon.mp4" alt="profil" type="video/mp4">
+    	<source src="/video/doraemon.mp4" type="video/mp4">
     	</video>
     	<br><br>
     	<!--html form-->
